@startuml
'https://plantuml.com/class-diagram

class OrganizationComponent
class Client
class Department
class College
class University

class OrganizationComponent{
add():void
remove():void
print():void
}

Client ..> OrganizationComponent

Department --|> OrganizationComponent
College --|> OrganizationComponent
University --|> OrganizationComponent

College o-- OrganizationComponent
University o-- OrganizationComponent

@enduml